--- a/vue/vue-test-3/get&set.html
+++ b/vue/vue-test-3/get&set.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <div id="app">
-        <p>你好，<span id='name'></span></p>
+        <p>你好，<span id="name"></span></p>
     </div>
     <script>
         var obj = {};
@@ -22,9 +24,10 @@
                 document.querySelector('#name').innerHTML = nick;
             }
         });
-    
+
         obj.name = "Jerry";
         console.log(obj.name)
     </script>
 </body>
+
 </html>
