--- a/vue/vue-test-3/index.html
+++ b/vue/vue-test-3/index.html
@@ -20,8 +20,8 @@
         <button @click="changeName">呵呵</button>
         <div k-html="html"></div>
     </div>
-    <script src='./kvue.js'></script>
-    <script src='./compile.js'></script>
+    <script src="./kvue.js"></script>
+    <script src="./compile.js"></script>
 
     <script>
         const kaikeba = new KVue({
