--- a/vue/vue-test-3/get&set.html
+++ b/vue/vue-test-3/get&set.html
@@ -26,7 +26,7 @@
         });
 
         obj.name = "Jerry";
-        console.log(obj.name)
+        console.log(obj.name);
     </script>
 </body>
 
