--- a/node/node05/mongo/index.html
+++ b/node/node05/mongo/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" />
-    <title>瓜果超市</title>
+    <title>列表查询</title>
 </head>
 
 <body>
